tests/ui/explicit_test_case_wrong_order.stderr
error: #[hegel::explicit_test_case] must appear below #[hegel::test], not above it.
       Write:
         #[hegel::test]
         #[hegel::explicit_test_case(...)]
         fn my_test(tc: ::hegel::TestCase) { ... }
 --> tests/ui/explicit_test_case_wrong_order.rs:6:1
  |
6 | fn my_test(tc: hegel::TestCase) {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
